--- a/AppsServicios/templates/AppsServicios/form_tecnologias.html
+++ b/AppsServicios/templates/AppsServicios/form_tecnologias.html
@@ -1,7 +1,7 @@
 
-{% extends "AppsServicios/plantilla_base.html" %}
+{% extends "AppsServicios/plantilla_base_2.html" %}
 
-{% block contenido_base %}
+{% block blockname %}
 
 <form method="post">
     {% csrf_token %}
@@ -16,4 +16,4 @@
 
 </form>
 
-{% endblock contenido_base %}
+{% endblock blockname %} 
