--- a/AppsServicios/templates/AppsServicios/lista_servicios.html
+++ b/AppsServicios/templates/AppsServicios/lista_servicios.html
@@ -1,63 +1,65 @@
-{% extends "AppsServicios/plantilla_base.html" %}
+{% extends "AppsServicios/plantilla_base_2.html" %}
 
+{% block blockname %}
 
-{% block contenido_base %}
- <!-- Masthead-->
- <header class="masthead">
-    <div class="container position-relative">
-        <div class="row justify-content-center">
-            <div class="col-xl-6">
-                <div class="text-center text-white">
-                    <!-- Page heading-->
-                    <!-- Signup form-->
-                    <!-- * * * * * * * * * * * * * * *-->
-                    <!-- * * SB Forms Contact Form * *-->
-                    <!-- * * * * * * * * * * * * * * *-->
-                    <!-- This form is pre-integrated with SB Forms.-->
-                    <!-- To make this form functional, sign up at-->
-                    <!-- https://startbootstrap.com/solution/contact-forms-->
-                    <!-- to get an API token!-->
-                    <form class="form-subscribe" id="contactForm" data-sb-form-api-token="API_TOKEN">
+{% if borrado %}
 
- {% if borrado %}
+<div class="eliminado">Fue borrado exitosamente el servicio Id: {{ borrado }}</div>
 
- <div class="eliminado">Fue borrado exitosamente el contacto Id: {{ borrado }}</div>
-                      
- {% endif %}
+{% endif %}   
 
-<h1 class="mb-5">Lista de Servicios </h1>
+<body>
+  <br>
+  <p class="text-center"><img class="img-fluid rounded mb-5 mb-lg-0" src="https://watermark.lovepik.com/photo/40150/2130.jpg_wh1200.jpg"alt="..." /></p>
+  <hr>
+  <br>
+  <h1 class="text-center"> PRINCIPALES SERVICIOS </h1>
+  <br>
+  <br>
+  <br>
+  <br>
+  <p>Servicios </p>
 
-<a href="{% url 'servicio_formulario' %}"><h1>Nuevo_Servicio</h1></a>
+  <center>
 
-
-<section class="tabla text-center">
-    <table class="table table-bordered">
-        <thead>
+      <table class="table table-striped">
           <tr>
+            <th>ID</th>
+              <th>Nombre</th>
+              <th>Costo</th>
+              <th>Tiempo</th>
+              <th>Editar o Eliminar</th>
 
-            <th scope="col">Nombre</th>
-            <th scope="col">Costo</th>
-            <th scope="col">Tiempo</th>
-            <th scope="col">Editar</th>
-            <th scope="col">Eliminar</th>
           </tr>
-        </thead>
+          {% for servicio in servicio %}
+          <tr>
+              <th scope="row">{{forloop.counter}}</th>
+              <td>{{servicio.nombre}}</td>
+              <td>{{servicio.valor}}</td>
+              <td>{{servicio.tiempo}}</td>
 
-{% for servicio in servicio %}
-<tr>
+              <td>
+              
+                  <a style="color: black; text-decoration: none" href="{% url 'editar_servicio' servicio.id %}">Editar</a> |
+                  <a style="color: black; text-decoration: none" href="{% url 'eliminar_servicio' servicio.id %}">Eliminar</a> 
+                    
+              </td>
+              
+          </tr>
+              {% endfor %}
+      </table>
+  </center>
 
-<td>{{servicio.nombre}}</td>
-<td>{{servicio.valor}}</td>
-<td>{{servicio.tiempo}}</td>
+  <p> Para agregar un nuevo servicio, click  <a style="text-decoration: none;" href="{% url 'servicio_formulario' %}" class="btn btn-outline-primary">AQUI</a> </p>
+  <hr>
+ 
+  <h1 class="text-center"><a href="{% url 'inicio' %}" 
+    class="btn btn-outline-primary" > VOLVER</a href ="{% url 'inicio' %}"></h1>
+  
+  <hr><hr>  
+</body>
+{% endblock blockname %} 
+</html>
 
-<td><a href="{% url 'editar_servicio' servicio.id %}">Editar</a></td>
-<td><a href="{% url 'eliminar_servicio' servicio.id %}">Eliminar</a></td>
 
-</tr>
-{% endfor %}
-
-</tbody>    
-</table>
-</section>
-
-{% endblock contenido_base %}
+<!------------------------------------------------------------>
