--- a/AppsServicios/templates/AppsServicios/lista_tecnologias.html
+++ b/AppsServicios/templates/AppsServicios/lista_tecnologias.html
@@ -1,25 +1,6 @@
-{% extends "AppsServicios/plantilla_base.html" %}
+{% extends "AppsServicios/plantilla_base_2.html" %}
 
-{% block contenido_base %}
-
-          <!-- Masthead-->
-          <header class="masthead">
-            <div class="container position-relative">
-                <div class="row justify-content-center">
-                    <div class="col-xl-6">
-                        <div class="text-center text-white">
-                            <!-- Page heading-->
-                            <h2 class="mb-4">Lista de tecnologias disponibles:</h2>
-                            <!-- Signup form-->
-                            <!-- * * * * * * * * * * * * * * *-->
-                            <!-- * * SB Forms Contact Form * *-->
-                            <!-- * * * * * * * * * * * * * * *-->
-                            <!-- This form is pre-integrated with SB Forms.-->
-                            <!-- To make this form functional, sign up at-->
-                            <!-- https://startbootstrap.com/solution/contact-forms tecnologia.id-->
-                            <!-- to get an API token!-->
-                            <form class="form-subscribe" id="contactForm" data-sb-form-api-token="API_TOKEN"--> 
-                              
+{% block blockname %}
 
 {% if borrado %}
 
@@ -27,33 +8,52 @@
 
 {% endif %}   
 
-<a href="{% url 'busqueda_tecnologia_form' %}"><h3>Buscar_Tecnologia</h3></a>
+<body>
+  <br>
+  <p class="text-center"><img class="img-fluid rounded mb-5 mb-lg-0" src="https://watermark.lovepik.com/photo/40150/2130.jpg_wh1200.jpg"alt="..." /></p>
+  <hr>
+  <br>
+  <h1 class="text-center"> PRINCIPALES TECNOLOGIAS </h1>
+  <br>
+  <br>
+  <br>
+  <br>
+  <p>Tecnologias </p>
 
-<section class="tabla text-center">
-    <table class="table table-bordered">
-        <thead>
+  <center>
+
+      <table class="table table-striped">
           <tr>
-            <th scope="col">Nombre</th>
-            <th scope="col">Version</th>
-            <th scope="col">Eliminar</th>
-            <th scope="col">Editar</th>
+            <th>ID</th>  
+            <th>Tecnologia</th>
+              <th>Version </th>
+              <th>Editar o eliminar </th>
           </tr>
-        </thead>
+          {% for tecnologia in tecnologia %}
+          <tr>
+              <th scope="row">{{forloop.counter}}</th>
+              <td>{{tecnologia.nombre}}</td>
+              <td>{{tecnologia.version}}</td>
 
-      {% for tecnologia in tecnologia %}
-      <tr>
-        <td>{{tecnologia.nombre}}</td>
-        <td>{{tecnologia.version}}</td>
-        <td><a href="{% url 'eliminar_tecnologia' tecnologia.id %}">Eliminar</a></td>
-        <td><a href="{% url 'editar_tecnologia' tecnologia.id %}">Editar</a></td>
-      </tr>
-      {% endfor %}
+              <td>
+              
+                  <a style="color: black; text-decoration: none" href="{% url 'editar_tecnologia' tecnologia.id %}">Editar</a> |
+                  <a style="color: black; text-decoration: none" href="{% url 'eliminar_tecnologia' tecnologia.id %}">Eliminar</a> 
+                    
+              </td>
+              
+          </tr>
+              {% endfor %}
+      </table>
+  </center>
 
-    </tbody>    
-  </table>
-</section>
-
-<h3 class="mb-5">Para agregar hacer click aquí</h3>
-<a href="{% url 'tecnologia_formulario' %}"><h3>Nueva_Tecnologia</h3></a>
-
-{% endblock contenido_base %}    
+  <p> Para agregar una nueva tecnologia, click  <a style="text-decoration: none;" href="{% url 'tecnologia_formulario' %}" class="btn btn-outline-primary">AQUI</a> </p>
+  <hr>
+ 
+  <h1 class="text-center"><a href="{% url 'inicio' %}" 
+    class="btn btn-outline-primary" > VOLVER</a href ="{% url 'inicio' %}"></h1>
+  
+  <hr><hr>
+</body>
+{% endblock blockname %} 
+</html>
