Se agrega mensajes y acerca de nosotros

--- a/AppsServicios/templates/AppsServicios/lista_servicios.html
+++ b/AppsServicios/templates/AppsServicios/lista_servicios.html
@@ -10,7 +10,7 @@
 
 <body>
   <br>
-  <p class="text-center"><img class="img-fluid rounded mb-5 mb-lg-0" src="https://watermark.lovepik.com/photo/40150/2130.jpg_wh1200.jpg"alt="..." /></p>
+  <p class="text-center"><img class="rounded-circle" src="https://watermark.lovepik.com/photo/40150/2130.jpg_wh1200.jpg"height="400"alt="..." /></p>
   <hr>
   <br>
   <h1 class="text-center"> PRINCIPALES SERVICIOS </h1>
