--- a/AppsServicios/templates/AppsServicios/plantilla_base_2.html
+++ b/AppsServicios/templates/AppsServicios/plantilla_base_2.html
@@ -41,7 +41,7 @@
                                     
                                 </ul>
                             </li>
-                            <li class="nav-item"><a class="nav-link" href="{% url 'inicio' %}"> | Contacto | </a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url 'contacto_emails' %}"> | Contacto | </a></li>
                             <li class="nav-item"><a class="nav-link" href="{% url 'acerca_appsservices' %}">Acerca de Coder-Pharma | </a></li>
                             <li class="nav-item"><a class="nav-link" href="{% url 'inicio' %}">Directorio | </a></li>
                             
